# bigmat

./: .gitignore  CMakeLists.txt  README.md
src/: bigmat.c  bigmat.h  defines.h  libbmp.c  libbmp.h
src/main/: test.c
